<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="div">/</string>
    <string name="mult">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="calculator">Calculator</string>
    <string name="clear">AC</string>
    <string name="erase">C</string>
    <string name="perc">%</string>
    <string name="dec">.</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="ms">MS</string>
</resources>