<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:gravity="start"
        android:background="@color/barbie_pink"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        >

        <Button
            android:text="@string/div"
            android:layout_column="3"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_1"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_2"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_3"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/mult"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_4"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_5"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_6"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/minus"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_7"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_8"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_9"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/plus"
            android:layout_rowSpan="3"
            android:layout_gravity="fill"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/_00"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>
        <Button
            android:text="@string/equal"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"/>

    </GridLayout>


</LinearLayout>